--- a/todo/style.css
+++ b/todo/style.css
@@ -7,6 +7,11 @@ body {
   font-size: 1rem;
 }
 
+h3, p {
+  padding: 0;
+  margin: 0;
+}
+
 button {
   background: transparent;
   color: inherit;
@@ -38,6 +43,10 @@ td {
   padding: 1rem 2rem;
 }
 
+form {
+  margin-top: 4rem;
+}
+
 input,
 textarea {
   padding: .5rem 1rem;
@@ -53,32 +62,23 @@ textarea:focus {
   box-shadow: 0 0 2rem .5rem #d0d0d0;
 }
 
-#projects {
+.projects-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 30%;
+  gap: 16px;
+}
+
+.projects-wrapper {
+  margin-top: 48px;
   display: flex;
   flex-wrap: wrap;
-  gap: 16px 32px;
+  gap: 16px;
 }
 
 .project {
-  padding: 8px 16px;
+  padding: 8px;
+  cursor: pointer;
   border-radius: 8px;
-  border: 2px solid #e4bcbc;
-}
-
-.project__title {
-  margin: 0;
-  padding-bottom: 8px;
-}
-
-.project__desc {
-  margin: 0;
-  padding: 0;
-}
-
-.project-form {
-  max-width: 30%;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  margin-bottom: 32px;
+  border: 2px solid #d1cae5;
 }
