--- a/todo/style.css
+++ b/todo/style.css
@@ -30,23 +30,6 @@ button:focus {
   color: #292929;
 }
 
-table {
-  margin-top: 4rem;
-}
-
-table, td {
-  border: 2px solid #d0d0d0;
-  border-collapse: collapse;
-}
-
-td {
-  padding: 1rem 2rem;
-}
-
-form {
-  margin-top: 4rem;
-}
-
 input,
 textarea {
   padding: .5rem 1rem;
@@ -60,6 +43,10 @@ textarea {
 input:focus,
 textarea:focus {
   box-shadow: 0 0 2rem .5rem #d0d0d0;
+}
+
+a {
+  cursor: pointer;
 }
 
 .todo-form {
@@ -81,4 +68,9 @@ textarea:focus {
   cursor: pointer;
   border-radius: 8px;
   border: 2px solid #d1cae5;
+}
+
+.todo-header {
+  display: flex;
+  justify-content: space-between;
 }
